--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQLServerConnection": "Server=LAPTOP-QH43MQOJ\\GIALUAT;Database=SportHubDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
