--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "BackEndDb": "Server=localhost,1433;Database=SportsBookingDB;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
+  "SkipDatabaseInitialization": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
