--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BackEndDb": "Server=localhost,1433;Database=SportsBookingDB;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "BackEndDb": "Server=localhost,1433;Database=SportsBookingDB;User Id=sa;Password=Root123!;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "SkipDatabaseInitialization": true,
   "Logging": {
