--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQLServerConnection": "Server=LAPTOP-QH43MQOJ\\GIALUAT;Database=SportHubDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "BackEndDb": "Server=localhost,1433;Database=SportsBookingDB;User Id=sa;Password=Root123!;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
